K8S/loki-testing/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "loki-testing"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "loki-testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "loki-testing"
                port:
                  number: 3100
